fix: Added responsivity to mangaPage

--- a/src/components/info/Info.scss
+++ b/src/components/info/Info.scss
@@ -1,3 +1,8 @@
 .info-main {
+  height: 40px;
   padding: 0.5rem 1rem;
+
+  @media (min-width: 800px) {
+    height: 70px;
+  }
 }
